A little template work.

--- a/site/template.html
+++ b/site/template.html
@@ -38,7 +38,7 @@
 
 <div id="resolution">
 </div>
-
+<!-- 
 <div id="share">
 	<ul>
 	<li><a href="https://news.ycombinator.com/submit" target="_blank"><span class="icon hackernews"></span> Hackernews</a></li>
@@ -67,12 +67,12 @@
 	</a></li>
 	
 	</ul>
-</div>
+</div> -->
 
 <div id="main">
 	{{content}}
 	
-	<div id="comments">
+	<!-- <div id="comments">
 	<div id="disqus_thread"></div>
 	</div>
 	
@@ -88,7 +88,7 @@
 			})();
 		}
 	</script>
-</div>
+</div> -->
 
 </body>
 </html>
