--- a/site/template.html
+++ b/site/template.html
@@ -38,15 +38,16 @@
 
 <div id="resolution">
 </div>
-<!-- 
+
 <div id="share">
 	<ul>
+	<!--
 	<li><a href="https://news.ycombinator.com/submit" target="_blank"><span class="icon hackernews"></span> Hackernews</a></li>
-	
+	-->
 	<li><a href="#" onclick="window.open('https://www.facebook.com/sharer.php?u=' + encodeURIComponent(window.location)); return false">
 		<span class="icon facebook"></span> Facebook
 	</a></li>
-	
+	<!--
 	<li><a href="#" onclick="window.open('https://www.reddit.com/submit?url=' + encodeURIComponent(window.location)); return false">
 		<span class="icon reddit"></span> Reddit
 	</a></li>
@@ -65,9 +66,9 @@
 	<li><a href="#" onclick="window.open('https://twitter.com/intent/tweet?url=' + encodeURIComponent(window.location)); return false">
 		<span class="icon twitter"></span> Twitter
 	</a></li>
-	
+	-->
 	</ul>
-</div> -->
+</div>
 
 <div id="main">
 	{{content}}
