--- a/site/template.html
+++ b/site/template.html
@@ -5,81 +5,39 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<title>{{sitetitle}} - {{gallerytitle}}</title>
-		<link href='https://fonts.googleapis.com/css?family=Lato:300,100' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=Amiri:400,400italic' rel='stylesheet' type='text/css' />
 		<link type="text/css" rel="stylesheet" media="all" href="{{basepath}}global.css" />
-		<script src="{{basepath}}json.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script src="{{basepath}}cookie.js"></script>
 		<script src="{{basepath}}global.js"></script>
 	</head>
 <body data-resolution="{{resolution}}" data-respath="{{resourcepath}}">
-	
-<ol id="marker">
-</ol>
-
-<div id="sidebar">
-	<div class="foreground">
-		<div id="profile" class="camera icon"></div>
-		<h1>{{sitetitle}}</h1>
-		<ul id="nav">
-			{{navigation}}			 
-		</ul>
+<div id="top">
+	<div id="nav">
+		{{navigation}}
 	</div>
-	
-	<ul id="control">
-	<li><a href="#" id="resbutton"><span class="monitor icon"></span><span class="restext"></span></a></li>
-	<li style="display: {{text_toggle}}"><a href="#" id="textbutton" class="active"><span class="toggle icon"></span><span class="text">hide text</span></a></li>
-	<li style="display: {{social_button}}"><a href="#" id="sharebutton"><span class="heart icon"></span>share</a></li>
-	<li  style="display: {{download_button}}"><a href="#" id="download"><span class="download icon"></span>download</a></li>
-	</ul>
+	<div class="wrapper">
+		<div class="author">
+			<img src="{{basepath}}img/camera.png" alt="" />
+			<span class="title">
+			{{sitetitle}}
+			<span class="subscript">{{gallerytitle}}</span>
+			</span>
 			
-	<div class="background"></div>
+		</div>
+		
+		<a href="#" id="nav_toggle"><span class="arrow_circle"><span class="arrow_down"></span></span><span class="moretext">More Stories</span></a>
+	</div>
 </div>
 
-<div id="resolution">
-</div>
-
-<div id="share">
-	<ul>
-	<!--
-	<li><a href="https://news.ycombinator.com/submit" target="_blank"><span class="icon hackernews"></span> Hackernews</a></li>
-	-->
-	<li><a href="#" onclick="window.open('https://www.facebook.com/sharer.php?u=' + encodeURIComponent(window.location)); return false">
-		<span class="icon facebook"></span> Facebook
-	</a></li>
-	<!--
-	<li><a href="#" onclick="window.open('https://www.reddit.com/submit?url=' + encodeURIComponent(window.location)); return false">
-		<span class="icon reddit"></span> Reddit
-	</a></li>
-	
-	<li><a href="#" id="pinterest"><span class="icon pinterest"></span> Pinterest</a></li>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			$('#pinterest').click(function(){
-				window.open('http://pinterest.com/pin/create/button/?url='+encodeURIComponent(window.location)+'&media='+encodeURIComponent(window.location)+($(current_slide).data('url')+'/'+$('#resolution li').eq(0).data('res')+'.jpg'));
-				return false;
-			});
-		});
-	</script>
-	
-	
-	<li><a href="#" onclick="window.open('https://twitter.com/intent/tweet?url=' + encodeURIComponent(window.location)); return false">
-		<span class="icon twitter"></span> Twitter
-	</a></li>
-	-->
-	</ul>
-</div>
-
-<div id="main">
+<div class="wrapper" id="main">
 	{{content}}
 	
-	<!-- <div id="comments">
+	<div id="comments">
 	<div id="disqus_thread"></div>
 	</div>
 	
 	<script type="text/javascript">
 		var disqus_shortname = '{{disqus_shortname}}';
-		var disqus_identifier = '{{disqus_identifier}}';
 		
 		if(disqus_shortname){
 			(function() {
@@ -89,7 +47,23 @@
 			})();
 		}
 	</script>
-</div> -->
+	
+	<div id="footer">
+	<div class="author center">
+		<img src="{{basepath}}img/camera.png" alt="" />
+		<span class="title">
+		{{sitetitle}}
+		<span class="subscript">{{gallerytitle}}</span>
+		</span>
+	</div>
+	
+</div>
+
+<div id="fullscreenvideo"></div>
+<div id="fullscreen"></div>
+
+</div>
+
 
 </body>
 </html>
