Fix nav and image URLs.

--- a/site/template.html
+++ b/site/template.html
@@ -11,7 +11,7 @@
 		<script src="{{basepath}}global.js"></script>
 
 
-		<link rel="stylesheet" href="../../node_modules/foundation-sites/dist/css/foundation-sites.css">
+		<link rel="stylesheet" href="foundation.css">
 
 
 	</head>
