Background image style implemented.

--- a/site/post-template.html
+++ b/site/post-template.html
@@ -1,4 +1,4 @@
-<div class="grid-x align-center {{class}}">
+<div class="grid-x align-center background {{class}}">
 	<div class="wrapper">
   	<div class="post index{{index}}">
   		{{post}}
