--- a/site/template.html
+++ b/site/template.html
@@ -23,6 +23,12 @@
 				margin: 0;
 			}
 
+			.background .image {
+				height: 100vh;
+				width: 100vw;
+				background: no-repeat fixed center center / cover;
+			}
+
 
 
 
