--- a/site/post-template.html
+++ b/site/post-template.html
@@ -1,11 +1,12 @@
-<div class="grid-x align-center background {{class}}">
-	<div class="wrapper">
+<!--div class="cell {{class}}"-->
+	<!--div class="wrapper">
   	<div class="post index{{index}}">
   		{{post}}
   	</div>
-	</div>
+	</div-->
 
-	<div class="image blank index{{index}}" style="color: {{textcolor}}; background-color: {{backgroundcolor}}; width: {{width}}%" data-type="{{type}}" data-maxwidth="{{imagewidth}}" data-maxheight="{{imageheight}}" data-textcolor="{{textcolor}}" data-color1="{{color1}}" data-color2="{{color2}}" data-color3="{{color3}}" data-color4="{{color4}}" data-color5="{{color5}}" data-color6="{{color6}}" data-color7="{{color7}}" data-videoformats="{{videoformats}}">
+	<figure class="image blank index{{index}} cell {{class}}" style="color: {{textcolor}}; background-color: {{backgroundcolor}}; width: {{width}}%" data-type="{{type}}" data-maxwidth="{{imagewidth}}" data-maxheight="{{imageheight}}" data-textcolor="{{textcolor}}" data-color1="{{color1}}" data-color2="{{color2}}" data-color3="{{color3}}" data-color4="{{color4}}" data-color5="{{color5}}" data-color6="{{color6}}" data-color7="{{color7}}" data-videoformats="{{videoformats}}">
 		<img src="//:0" width="{{imagewidth}}" height="{{imageheight}}" data-url="{{imageurl}}" />
+    <figcaption>{{post}}</figcaption>
 	</div>
-</div>
+<!--/div-->
