--- a/site/template.html
+++ b/site/template.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html class="no-js" lang="en">
 	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge"/> 
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<title>{{sitetitle}} - {{gallerytitle}}</title>
 		<link href='https://fonts.googleapis.com/css?family=Amiri:400,400italic' rel='stylesheet' type='text/css' />
@@ -12,6 +13,7 @@
 
 
 		<link rel="stylesheet" href="{{basepath}}foundation.css">
+		<script src="{{basepath}}foundation.js"></script>
 
 		<style type="text/css">
 			#gallery.grid-container {
@@ -33,7 +35,9 @@
 				background: no-repeat fixed center center / cover;
 			}
 
-
+			#modal {
+				padding: 0;
+			}
 
 
 		</style>
@@ -73,11 +77,11 @@
 	
 </section>
 
-<div id="fullscreenvideo"></div>
-<div id="fullscreen"></div>
+<div class="full reveal text-center" id="modal" data-reveal></div>
 
 </main>
-
-
+<script>
+  $(document).foundation();
+</script>
 </body>
 </html>
