--- a/site/template.html
+++ b/site/template.html
@@ -29,6 +29,12 @@
 			}
 
 			.image img {
+				visibility: hidden;
+				display: block;
+				position: relative;
+			}
+
+			.image.index1 img, .portrait img, .landscape img, .fill-screen img, .full-width img {
 				display: none;
 			}
 
@@ -41,13 +47,13 @@
 			}
 
 			.title-bar-wrapper {
-				z-index: 1;
+				z-index: 10;
 			}
 
 			.title-bar {
 				background: none;
 				position: fixed;
-				z-index: 1;
+				z-index: 10;
 			}
 
 			h1.title {
@@ -62,20 +68,59 @@
 			  top: 0 !important;
 			}
 
-			.portrait .image {
+			/* Splash image */
+			.image.index1 {
 				height: 100vh;
-				padding: 0;
+				width: 100vw;
+				left: 0;
 				background-size: cover;
+				background-attachment: fixed;
 			}
 
-			.landscape .image {
+			.post-wrapper.full-width .image {
+				width: 100vw;
+			}
+			
+			.post-wrapper.fill-screen .image {
+				height: 100vh;
+				width: 100vw;
+				background-size: cover;
+			}
+			
+			.post-wrapper.fit-screen .image {
+				height: 100vh;
+				width: 100vw;
+				background-size: contain;
+			}
+
+			.post-wrapper.portrait .image {
+				height: 100vh;
+				width: 100vw;
+				background-size: contain; /*JS to cover*/
+			}
+
+			.post-wrapper.landscape .image {
+				/*height: 100vh cap via JS*/
 				width: 100vw;
 				background-size: cover;
 			}
 
-			.fixed-window .image {
+			.post-wrapper.fixed-window .image {
+				/* Must be used with other image classes. */
 				background-attachment: fixed;
-				padding-top: 100vh !important;
+			}
+
+			.post-wrapper.focus-left .image {
+				background-position-x: left;
+			}
+			.post-wrapper.focus-right .image {
+				background-position-x: right;
+			}
+			.post-wrapper.focus-top .image {
+				background-position-y: top
+			}
+			.post-wrapper.focus-bottom .image {
+				background-position-y: bottom
 			}
 /* transform: translate3d(0px, 0px, 0px) scale(1.06049, 1.06049);*/
 
