--- a/site/template.html
+++ b/site/template.html
@@ -8,7 +8,7 @@
 		<title>{{sitetitle}} - {{gallerytitle}}</title>
 		<link href='https://fonts.googleapis.com/css?family=Amiri:400,400italic' rel='stylesheet' type='text/css' />
 		<link type="text/css" rel="stylesheet" media="all" href="{{basepath}}global.css" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="./jquery.1.11.3.min.js"></script>
 		<script src="{{basepath}}global.js"></script>
 
 
